# vino_externalLibVNCServer

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  acconfig.h  autogen.sh  configure.in  vino.doap
capplet/: .cvsignore  Makefile.am  gedit-spinner.c  gedit-spinner.h  org.gnome.vino.Service.php  sexy-url-label.c  vino-message-box.c  vino-message-box.h  vino-preferences.c  vino-preferences.desktop.in  vino-preferences.desktop.in.in  vino-preferences.glade  vino-preferences.ui  vino-url-webservice.c  vino-url-webservice.h  vino-url.c  vino-url.h  webservices
client/java/: .cvsignore  Makefile.am  README  vino-client.html
client/java/rdr/: InStream.java  MemOutStream.java
client/java/rfb/: CConnection.java  CMsgHandler.java  CMsgReader.java  CSecurity.java  CSecurityNone.java  CSecurityTls.java  CSecurityVncAuth.java  ConnParams.java  DesCipher.java  HextileDecoder.java  ManagedPixelBuffer.java  PasswdGetter.java  PixelBuffer.java  PixelFormat.java  RREDecoder.java  RawDecoder.java  SecTypes.java  ZRLEDecoder.java
client/java/vncviewer/: AboutDialog.java  CConn.java  DesktopWindow.java  InfoDialog.java  OptionsDialog.java  PixelBufferImage.java  ServerDialog.java  VNCViewer.java
cut-n-paste/: Makefile.am
cut-n-paste/screen-exec/: .cvsignore  Makefile.am
docs/: Makefile.am  TODO  debugging.txt  remote-desktop.txt
icons/: Makefile.am
po/: .cvsignore  ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  POTFILES.skip  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  (+51 more)
server/: .cvsignore  GNOME_RemoteDesktop.idl  GNOME_RemoteDesktop.server.in.in  Makefile.am  dbus-interface.xml  org.freedesktop.Telepathy.Client.Vino.service.in  org.gnome.Vino.service.in  vino-background.c  vino-background.h  vino-cursor.c  vino-cursor.h  vino-dbus-error.c  vino-dbus-error.h  vino-dbus-listener.c  vino-dbus-listener.h  vino-fb.c  vino-fb.h  vino-http.c  vino-http.h  vino-input.c  vino-input.h  vino-main.c  vino-marshal.list  vino-mdns.c  vino-mdns.h  vino-prefs.c  vino-prefs.h  vino-prompt.c  vino-prompt.glade  vino-prompt.h  vino-prompt.ui  vino-server.c  vino-server.desktop.in.in  vino-server.h  vino-server.schemas.in  vino-shell.c  vino-shell.h  vino-status-icon.c  vino-status-icon.h  vino-status-tube-icon.c  (+10 more)
server/libvncserver/: .cvsignore  CHANGES  Makefile.am  auth.c  cursor.c  main.c  rfbregion.c  rfbserver.c  sockets.c  stats.c  tight.c  translate.c  vncauth.c  zlib.c  zrle.c  zrleencodetemplate.c
server/libvncserver/ifaddr/: Makefile.am  getifaddrs.c  ifaddrs.h
server/libvncserver/rfb/: Makefile.am  rfb.h  rfbproto.h  rfbregion.h
server/miniupnp/: Makefile.am
server/smclient/: Makefile.am
session/: .cvsignore  Makefile.am  README  README.old  gsm-remote-desktop.diff  vino-session.c
tools/: Makefile.am  vino-passwd.c
